test/Fail/Issue3491.err
Issue3491.agda:12.23-33: error: [IllformedProjectionPatternAbstract]
Ill-formed projection pattern .unbox
when checking that the pattern box .unbox has type Box b
